<resources>
    <string name="app_name">App FINTECH</string>
    <string name="hello_text">Bienvenido!</string>
    <string name="accept_button">Ingresar</string>
    <string name="button_clicked">Haz dado click al boton!</string>
    <string name="add_text">Usuario</string>
    <string name="add_password">Contraseña</string>
    <string name="register">Registrarse</string>
    <string name="clave_Bancaria">Clave bancaria</string>

    <string name="button_Operaciones">Operaciones Bancarias</string>
    <string name="button_Cuenta">Opciones de la Cuenta</string>
    <string name="button_Configuracion">Configuracion</string>
    <string name="button_Depositar">Depositar</string>
    <string name="button_Retirar">Retirar</string>
    <string name="button_ObtenerFondos">Obtener Fondos</string>
    <string name="button_Transferir">Transferir</string>
    <string name="text_OperacionBancaria">Espacio donde se planea demostrar la ejecucion del boton</string>
    <string name="text_PromocionOperaciones">Espacio para mostrar informacion de las operaciones del Usuario</string>
    <string name="button_Membresia">Conoce tu membresia</string>
    <string name="button_MembresiaCosto">Costos de las Membresias</string>
    <string name="button_Suscripcion">Suscripción a la membresia Silver</string>
    <string name="text_Membresia">Parte que muestra que tipo de suscripción tiene el usuario</string>
    <string name="text_MembresiaCosto">Parte que muestra que tipo de suscripciones tiene la aplicacion</string>
    <string name="text_Suscripcion">Parte en la que se si se realizo o no la suscripcioón del usuario</string>
    <string name="button_Informacion">Informacion Usuario</string>
    <string name="button_CambiarInformacion">Camabiar Informacion de Usuario</string>




    =======
    <string name="configuracion">Configuración</string>
    <string name="accionescuenta">Acciones de cuenta</string>
    <string name="verificarsesion">Verificar sesión</string>
    <string name="cambiarnombre">Cambiar nombre</string>
    <string name="cambiarapellido">Cambiar apellido</string>
    <string name="obtenerinfo">Obtener información</string>
    <string name="cerrarsesion">cerrar sesión</string>
    <string name="conocetumembresia">Conoce tu membresía</string>
    <string name="costosdemembresia">Costos de membresías</string>
    <string name="suscribete">Suscribirse a membresía silver</string>
    >>>>>>> e060b096cb10e59cd05d2123a8509144570107b0
</resources>