<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesCuenta"
    android:background="@color/blue_background">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_PromocionOperaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />



    <Button
        android:id="@+id/buttonMembresia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="356dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_Membresia"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textMembresia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_Membresia"
        app:layout_constraintBottom_toTopOf="@+id/buttonMembresiaCosto"
        app:layout_constraintTop_toBottomOf="@+id/buttonMembresia"
        tools:layout_editor_absoluteX="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>


    <Button
        android:id="@+id/buttonMembresiaCosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="224dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_MembresiaCosto"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textMembresiaCosto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_MembresiaCosto"
        app:layout_constraintBottom_toTopOf="@+id/buttonSuscripcion"
        app:layout_constraintTop_toBottomOf="@+id/buttonMembresiaCosto"
        tools:layout_editor_absoluteX="-16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonSuscripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="96dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_Suscripcion"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textSuscripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_OperacionBancaria"
        app:layout_constraintTop_toBottomOf="@+id/buttonSuscripcion"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>