<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OperacionesBancarias"
    android:background="@color/blue_background">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/text_PromocionOperaciones"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/buttonDepositar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="388dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_Depositar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-20dp" />

    <TextView
        android:id="@+id/textDepositar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_OperacionBancaria"
        app:layout_constraintBottom_toTopOf="@+id/buttonRetirar"
        app:layout_constraintTop_toBottomOf="@+id/buttonDepositar"
        tools:layout_editor_absoluteX="26dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonRetirar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="280dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_Retirar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
       />

    <TextView
        android:id="@+id/textRetirar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_OperacionBancaria"
        app:layout_constraintBottom_toTopOf="@+id/buttonObtenerFondos"
        app:layout_constraintTop_toBottomOf="@+id/buttonRetirar"
        tools:layout_editor_absoluteX="-16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonObtenerFondos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="180dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_ObtenerFondos"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textObtenerFondos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_OperacionBancaria"
        app:layout_constraintBottom_toTopOf="@+id/buttonTransferir"
        app:layout_constraintTop_toBottomOf="@+id/buttonObtenerFondos"
        tools:layout_editor_absoluteX="16dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>

    <Button
        android:id="@+id/buttonTransferir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="68dp"
        android:layout_weight="1"
        android:backgroundTint="@color/blue_light_sign"
        android:text="@string/button_Transferir"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <TextView
        android:id="@+id/textTransferir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_OperacionBancaria"
        app:layout_constraintTop_toBottomOf="@+id/buttonTransferir"
        tools:layout_editor_absoluteX="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>