<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue_background"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"/>


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Registro_Usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_text"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="@color/white"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Registro_Clave"
        android:inputType= "number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/clave_Bancaria"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="@color/white"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:startIconDrawable="@drawable/ic_baseline_credit_card_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Registro_Contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/add_password"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="24dp"
        android:textColorHint="@color/white"

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnRegistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:backgroundTint="@color/blue_light_sign"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Registrarme"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/mexicanPink"
        android:paddingHorizontal="16dp"
        android:paddingVertical="8dp"
        android:text="Cancelar"
        android:textColor="@color/white" />


</LinearLayout>
